Make size of filter screenshots more consistent

--- a/docs.html
+++ b/docs.html
@@ -438,7 +438,7 @@
           the Age must be over 21.
         </p>
         <img
-          class="ui image bordered rounded large"
+          class="ui image bordered rounded medium"
           src="assets/images/docs_screenshots/and-filter.png"
         />
         <p>
@@ -449,7 +449,7 @@
           below, the Level must be Bronze OR the Age must be over 21.
         </p>
         <img
-          class="ui image bordered rounded large"
+          class="ui image bordered rounded medium"
           src="assets/images/docs_screenshots/or-filter.png"
         />
         <h4 id="output-step">Output</h4>
