transcribed functions section

--- a/docs.html
+++ b/docs.html
@@ -35,8 +35,7 @@
         <h2 id="functions-header">Functions</h2>
         <h3 id="functions-overview">Overview</h3>
         <p>
-          Numbrz functions are an integral part to the development of workflows
-          and offer a truly unique way of creating and laying out calculations.
+            Calculations are built graphically in Numbrz using the Modeler. A function is a collection of widgets which provide a variety of capabilities like accepting input, producing output, simple arithmetic, and conditional logic.
         </p>
         <h3 id="functions-canvas">Canvas</h3>
         <p>
