--- a/docs.html
+++ b/docs.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Numbrz - Documentation</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
