--- a/docs.html
+++ b/docs.html
@@ -671,6 +671,10 @@
         </div>
       </div>
     </div>
+    <div id="footer-wrapper">
+      <p>Have Questions? <br/><a href="mailto:support@numbrz.com">support@numbrz.com</a></p> 
+      <p>Ⓒ 2019 Numbrz, Inc.</p>
+    </div>
     <script>
       $(".ui.accordion").accordion();
 
