--- a/index.html
+++ b/index.html
@@ -36,5 +36,13 @@
         <h1>Product Features</h1>
       </div>
     </div>
+    <div id="footer-wrapper">
+      <p>
+        Have Questions? <br /><a href="mailto:support@numbrz.com"
+          >support@numbrz.com</a
+        >
+      </p>
+      <p>Ⓒ 2019 Numbrz, Inc.</p>
+    </div>
   </body>
 </html>
