--- a/examples.html
+++ b/examples.html
@@ -624,6 +624,10 @@
         </div>
       </div>
     </div>
+    <div id="footer-wrapper">
+        <p>Have Questions? <br/><a href="mailto:support@numbrz.com">support@numbrz.com</a></p> 
+        <p>Ⓒ 2019 Numbrz, Inc.</p>
+      </div>
     <script>
       $(".ui.accordion").accordion();
     </script>
