removed Product Page, updated Lookup widget

--- a/docs.html
+++ b/docs.html
@@ -24,8 +24,7 @@
       <div id="header">
         <div id="site-logo"></div>
         <div id="nav">
-          <a href="index.html">Product</a>
-          <a href="examples.html">Examples</a>
+          <a href="index.html">Tutorial</a>
           <a href="docs.html" class="active">Docs</a>
         </div>
       </div>
@@ -137,6 +136,12 @@
       <img
           class="ui image medium rounded bordered"
           src="assets/images/docs_screenshots/lookup_leftpane.png"
+        />
+
+        <p>Below is a demonstration of how the Lookup widget is created and configured:</p>
+        <img
+          class="ui image big rounded bordered"
+          src="assets/images/docs_screenshots/Lookup_video.gif"
         />
         
         
