--- a/tutorial.html
+++ b/tutorial.html
@@ -22,7 +22,7 @@
   <body>
     <div id="header-wrapper">
       <div id="header">
-        <div id="site-logo"></div>
+        <a href="http://numbrz.com"><div id="site-logo"></div></a>
         <div id="nav">
           <a href="index.html">Features</a>
           <a href="tutorial.html" class="active">Tutorial</a>
