--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Numbrz - Documentation</title>
+    <title>Numbrz - Features</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="styles.css" />
     <link
