Add separate contents entries for Data/Google Sheets and Data/Snowflake

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           src="assets/images/docs_screenshots/data-list.png"
         />
         <h3 id="data-create">Creating Datasets</h3>
-        <h4>Google Sheets</h4>
+        <h4 id="sheets">Google Sheets</h4>
         <p>
           Google Sheets is a popular online spreadsheet application. Numbrz
           natively supports reading from and writing to Sheets with a couple of
@@ -273,7 +273,7 @@
           bar, then go to Numbrz and paste it into the Numbrz Connect dialog.
           Give your dataset a meaningful name and click <em>Connect</em>.
         </p>
-        <h4>Snowflake</h4>
+        <h4 id="snowflake">Snowflake</h4>
         <p>
           Snowflake is a cloud-based data warehouse gaining popularity in many
           organizations. Numbrz natively supports reading from and writing to
@@ -681,8 +681,11 @@
             <div class="ui bulleted list">
               <div class="item"><a href="#data-overview">Overview</a></div>
               <div class="item">
-                <a href="#data-create">Creating Datasets</a>
-              </div>
+                <div><a href="#data-create">Creating Datasets</a></div>
+                <div class="list">
+                  <div class="item"><a href="#sheets">Google Sheets</a></div>
+                  <div class="item"><a href="#snowflake">Snowflake</a></div>
+                </div>
               <div class="item">
                 <a href="#data-change">Changing Datasets</a>
               </div>
