Fix bad commit :-(

--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@
                   <div class="item"><a href="#sheets">Google Sheets</a></div>
                   <div class="item"><a href="#snowflake">Snowflake</a></div>
                 </div>
+              </div>
               <div class="item">
                 <a href="#data-change">Changing Datasets</a>
               </div>
