added support page. Added requirements section. Added Project section.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
         <div id="nav">
           <a href="index.html" class="active">Features</a>
           <a href="tutorial.html">Tutorial</a>
+          <a href="support.html">Support</a>
         </div>
       </div>
     </div>
 
     <div id="content-wrapper">
       <div id="content">
+        <h2 id="numbrz-requirements">Requirements</h2>
+        <h3 id="requirements-workflows">Workflow Requirements</h3>
+        <p>To run workflows users will need an active Gmail account and the current version of Google Chrome browser.</p>
         <h2 id="functions-header">Functions</h2>
         <h3 id="functions-overview">Overview</h3>
         <p>
@@ -642,10 +646,32 @@
         </p>
 
         <h2 id="projects-anchor">Projects</h2>
-        <h3>Overview</h3>
+        <h3 id="projects-overview">Overview</h3>
+        <p>Numbrz Projects allow users to group functions, data, and workflows in one easy-to-manage place. Users can link existing artifacts or create new artifacts that will be linked to a Project upon instantiation. New or existing artifacts can be added by clicking '+' icon at the bottom right corner of the project container. The following graphic demonstrates adding a new Function to the Project:</p>
+        <img
+          class="ui image bordered rounded big"
+          src="assets/images/docs_screenshots/new_project_artifact.gif"
+        />
+        <p>And the following graphic shows how to add an existing Function:</p>
+        <img
+          class="ui image bordered rounded big"
+          src="assets/images/docs_screenshots/existing_project_artifact.gif"
+        />
+        <p>Navigating between various types of articacts belonging to the project is done through use of tabbed menu located at the top of the Project container.</p>
+
       </div>
       <div id="sidebar-right">
         <div class="ui accordion">
+          <div class="title">
+            <i class="dropdown icon"></i>
+            <a href="#numbrz-requirements">Requirements</a>
+          </div>
+          <div class="content">
+              <div class="ui bulleted list">
+                  <div class="item"><a href="#requirements-workflows">Workflow Requirements</a></div>
+                </div>
+          </div>
+              
           <div class="title">
             <i class="dropdown icon"></i>
             <a href="#functions-header">Functions</a>
@@ -675,7 +701,7 @@
           </div>
           <div class="title">
             <i class="dropdown icon"></i>
-            Data
+            <a href="#data-anchor">Data</a>
           </div>
           <div class="content">
             <div class="ui bulleted list">
@@ -694,7 +720,7 @@
           </div>
           <div class="title">
             <i class="dropdown icon"></i>
-            Workflows
+            <a href="#workflows-anchor">Workflows</a>
           </div>
           <div class="content">
             <div class="ui bulleted list">
@@ -718,11 +744,11 @@
           </div>
           <div class="title">
             <i class="dropdown icon"></i>
-            Projects
+            <a href="#projects-anchor">Projects</a>
           </div>
           <div class="content">
             <div class="ui bulleted list">
-              <div class="item"><a href="">Overview</a></div>
+              <div class="item"><a href="#projects-overview">Overview</a></div>
             </div>
           </div>
         </div>
