--- a/tutorial.html
+++ b/tutorial.html
@@ -26,6 +26,7 @@
         <div id="nav">
           <a href="index.html">Features</a>
           <a href="tutorial.html" class="active">Tutorial</a>
+          <a href="support.html">Support</a>
         </div>
       </div>
     </div>
