Additional 'requirements' content

--- a/index.html
+++ b/index.html
@@ -34,12 +34,25 @@
     <div id="content-wrapper">
       <div id="content">
         <h2 id="numbrz-requirements">Requirements</h2>
-        <h3 id="requirements-workflows">Workflow Requirements</h3>
-        <p>To run workflows users will need an active Gmail account and the current version of Google Chrome browser.</p>
+        <p>
+          <em>General</em><br/>
+          The Numbrz application is best viewed on the latest desktop version of the 
+          <a href="https://www.google.com/chrome/">Google Chrome</a> web browser. Other 
+          browsers may work but are untested and not supported during the beta period. 
+        </p>
+        <p>
+          <em>Data & Workflows</em><br/>
+          The simplest method for linking to external data during the beta is via 
+          <a href="https://www.google.com/sheets/about/">Google Sheets</a>. To Use 
+          Google Sheets, you need an account with Google. You may also use your Google 
+          account to log in to Numbrz.
+        </p>
         <h2 id="functions-header">Functions</h2>
         <h3 id="functions-overview">Overview</h3>
         <p>
-            Calculations are built graphically in Numbrz using the Modeler. A function is a collection of widgets which provide a variety of capabilities like accepting input, producing output, simple arithmetic, and conditional logic.
+            Calculations are built graphically in Numbrz using the Modeler. A function is a 
+            collection of widgets which provide a variety of capabilities like accepting input, 
+            producing output, simple arithmetic, and conditional logic.
         </p>
         <h3 id="functions-canvas">Canvas</h3>
         <p>
@@ -666,12 +679,6 @@
             <i class="dropdown icon"></i>
             <a href="#numbrz-requirements">Requirements</a>
           </div>
-          <div class="content">
-              <div class="ui bulleted list">
-                  <div class="item"><a href="#requirements-workflows">Workflow Requirements</a></div>
-                </div>
-          </div>
-              
           <div class="title">
             <i class="dropdown icon"></i>
             <a href="#functions-header">Functions</a>
