--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="nav">
           <a href="index.html" class="active">Features</a>
           <a href="tutorial.html">Tutorial</a>
-          <a href="support.html">Support</a>
+          <!-- <a href="support.html">Support</a> -->
         </div>
       </div>
     </div>
@@ -34,19 +34,22 @@
     <div id="content-wrapper">
       <div id="content">
         <h2 id="numbrz-requirements">Requirements</h2>
+
+        <h3>General</h3>
         <p>
-          <em>General</em><br/>
           The Numbrz application is best viewed on the latest desktop version of the 
           <a href="https://www.google.com/chrome/">Google Chrome</a> web browser. Other 
-          browsers may work but are untested and not supported during the beta period. 
+          browsers may work but are untested and not supported during the beta period.
         </p>
+
+          <h3>Data & Workflows</h3>
         <p>
-          <em>Data & Workflows</em><br/>
           The simplest method for linking to external data during the beta is via 
           <a href="https://www.google.com/sheets/about/">Google Sheets</a>. To Use 
           Google Sheets, you need an account with Google. You may also use your Google 
           account to log in to Numbrz.
         </p>
+
         <h2 id="functions-header">Functions</h2>
         <h3 id="functions-overview">Overview</h3>
         <p>
