--- a/support.html
+++ b/support.html
@@ -26,7 +26,7 @@
         <div id="nav">
           <a href="index.html">Features</a>
           <a href="tutorial.html">Tutorial</a>
-          <a href="support.html" class="active">Support</a>
+          <!-- <a href="support.html" class="active">Support</a> -->
         </div>
       </div>
     </div>
