--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
           Before you can complete the link, you must grant access to the sheet
           to the Numbrz agent account. This is not done in the Numbrz
           application, but rather by using the <em>Share</em> button on the
-          spreadsheet itself. Simply paste the email address shown in the
-          Connect dialog into the <em>People</em> field and click <em>Done</em>.
-          If prompted, elect to 'Skip sending invitations' and click
-          <em>OK</em>.
+          spreadsheet itself. Simply paste the email address shown in the Numbrz
+          Connect dialog into the <em>People</em> field.  Be sure to uncheck the <em>notify people</em> check box.
+          Then click <em>Send</em>.  Some sharing screens alternatively 
+          prompt 'Skip sending invitations' and <em>Done</em>. 
         </p>
         <p>
           While in Sheets, copy the full URL of the sheet from your browsers URL
