Add screen shots showing the Google Sheets sharing dialog

--- a/index.html
+++ b/index.html
@@ -298,9 +298,18 @@
           to the Numbrz agent account. This is not done in the Numbrz
           application, but rather by using the <em>Share</em> button on the
           spreadsheet itself. Simply paste the email address shown in the Numbrz
-          Connect dialog into the <em>People</em> field.  Be sure to uncheck the <em>notify people</em> check box.
-          Then click <em>Send</em>.  Some sharing screens alternatively 
-          prompt 'Skip sending invitations' and <em>Done</em>. 
+          Connect dialog into the <em>People</em> field of the Google Sheets
+          Sharing dialog (shown below).  
+        </p>
+        <div class="ui images bordered rounded medium">
+          <img class="ui image" src="assets/images/docs_screenshots/share-n1.png" />
+          <img class="ui image" src="assets/images/docs_screenshots/share-n2.png" />
+        </div>
+        <p>
+          Be sure to uncheck the <em>notify people</em> check box, as shown above.
+          Then click <em>Send</em>.  The Google Sheets sharing dialog will appear like
+          the second screen above, click <em>OK</em>. If you are prompted to 'Skip 
+          sending invitations' click OK and then click <em>Done</em>. 
         </p>
         <p>
           While in Sheets, copy the full URL of the sheet from your browsers URL
