--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           browsers may work but are untested and not supported during the beta period.
         </p>
 
-          <h3>Data & Workflows</h3>
+        <h3>Data & Workflows</h3>
         <p>
           The simplest method for linking to external data during the beta is via 
           <a href="https://www.google.com/sheets/about/">Google Sheets</a>. To Use 
@@ -369,6 +369,18 @@
           also allows you to update column labels if you so desire.
         </p>
         <h2 id="workflows-anchor">Workflows</h2>
+        <h3 id="workflow-limits">Limits</h2>
+        <p>
+          During the Beta period the following limits apply to all users:
+        </p>
+        <ul>
+          <li>Input Data Records are limited to 5000 rows</li>
+          <li>Fill (see Fill Step) records are limited to 50 rows</li>
+          <li>The total duration of a workflow is limited to 30 minutes
+        </ul>
+        <p>
+          Please contact us if you have use-cases that exceed these limits.
+        </p>
         <h3 id="workflow-overview">Overview</h3>
         <p>
           Numbrz Workflows turn Functions and Data into powerful applications
@@ -757,6 +769,7 @@
           </div>
           <div class="content">
             <div class="ui bulleted list">
+              <div class="item"><a href="#workflow-limits">Limits</a></div>
               <div class="item"><a href="#workflow-overview">Overview</a></div>
               <div class="item">
                 <a href="#workflow-create">Creating Workflows</a>
