Remove (comment) switch widget nav in outline

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                     <a href="#widgets-arithmetic">Arithmetic</a>
                   </div>
                   <div class="item"><a href="#widgets-lookup">Lookup</a></div>
-                  <div class="item"><a href="#widgets-switch">Switch</a></div>
+                  <!-- <div class="item"><a href="#widgets-switch">Switch</a></div> -->
                   <div class="item"><a href="#widgets-input">Input</a></div>
                   <div class="item"><a href="#widgets-output">Output</a></div>
                 </div>
