Add contents item for new switch widget section

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <p>Below is a demonstration of how the Lookup widget is created and configured:</p>
         <img class="ui image big rounded bordered" src="assets/images/docs_screenshots/Lookup_video.gif" />
 
-        <h4>Switch</h4>
+        <h4 id="widgets-switch">Switch</h4>
         <p>
           The Switch Widget allows you to add decision logic to your function. One or more values are evaluated against a
           set of <em>rules</em>, when a rule evaluates to <em>true</em> the widget result column takes on the specified
@@ -755,7 +755,7 @@
                     <a href="#widgets-arithmetic">Arithmetic</a>
                   </div>
                   <div class="item"><a href="#widgets-lookup">Lookup</a></div>
-                  <!-- <div class="item"><a href="#widgets-switch">Switch</a></div> -->
+                  <div class="item"><a href="#widgets-switch">Switch</a></div>
                   <div class="item"><a href="#widgets-input">Input</a></div>
                   <div class="item"><a href="#widgets-output">Output</a></div>
                 </div>
