Add a brief description of using Criteria in Combine step

--- a/index.html
+++ b/index.html
@@ -514,6 +514,17 @@
           drop-down menu. In the resulting field list, check the fields you want to
           include in the row this step will emit.
         </p>
+        <p>
+          <em>Performing Simple "Joins" with the Combine Step</em><br/>
+          You can use <em>Criteria</em> to restrict what rows will be combined. For example, 
+          if you have input data with numeric codes, and another  dataset that relates these 
+          codes to friendly names, you can restrict the combination to only those rows where 
+          the codes in these two datasets are equal.
+        </p>
+        <img
+          class="ui image bordered rounded large"
+          src="assets/images/docs_screenshots/combine-step-join.png"
+        />
         <h4 id="exec-step">Execute Function</h4>
         <p>
           The <em>Execute Function</em> step uses data from the input rows to
